# ngsim-lane-change-detection

./: README.md  feature_generator.py  main.py  pyproject.toml  road_helper.py  structs.py  trajectory_planner.py  trajectory_predictor.py  utils.py  utils_collision.py  vector.py  visualize_predicted.py
input/: lc_anno.json
test/: test_feature_generator.py  test_trajectory_predictor.py
